; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ssb/extr_driver_extif.c_extif_write32_masked.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ssb/extr_driver_extif.c_extif_write32_masked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssb_extif = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ssb_extif*, i32, i32, i32)* @extif_write32_masked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extif_write32_masked(%struct.ssb_extif* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.ssb_extif*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ssb_extif* %0, %struct.ssb_extif** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* %8, align 4
  %11 = and i32 %10, %9
  store i32 %11, i32* %8, align 4
  %12 = load %struct.ssb_extif*, %struct.ssb_extif** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @extif_read32(%struct.ssb_extif* %12, i32 %13)
  %15 = load i32, i32* %7, align 4
  %16 = xor i32 %15, -1
  %17 = and i32 %14, %16
  %18 = load i32, i32* %8, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %8, align 4
  %20 = load %struct.ssb_extif*, %struct.ssb_extif** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @extif_write32(%struct.ssb_extif* %20, i32 %21, i32 %22)
  %24 = load i32, i32* %8, align 4
  ret i32 %24
}

declare dso_local i32 @extif_read32(%struct.ssb_extif*, i32) #1

declare dso_local i32 @extif_write32(%struct.ssb_extif*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
